# hermetic_apple_toolchains

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  extensions.bzl
.github/: register_ci_xcode.py
.github/workflows/: ci.yml
examples/ios_example/: BUILD.bazel  Info.plist
examples/ios_example/Sources/: App.swift
patches/: apple_support_extra_include_directories.patch
private/: apple_cc.bzl  component.bzl  developer_dir.bzl  sdk.bzl  simulator_runtime.bzl  swift_config.bzl  toolchain.bzl  utils.bzl  xcode.bzl  xcode_config.bzl
scripts/: BUILD.bazel  create_hermetic_toolchain.sh
