module(
    name = "hermetic_apple_toolchains",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "apple_support", version = "2.5.4")

# Needed by the generated hermetic Apple CC toolchain repository, which reuses
# apple_support's crosstool (the generated BUILD file and the copied
# cc_toolchain_config.bzl load from these modules).
bazel_dep(name = "bazel_features", version = "1.47.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "rules_apple", version = "4.5.3", dev_dependency = True)
bazel_dep(name = "rules_swift", version = "4.0.0-rc3", dev_dependency = True)

# The hermetic Xcode support requires two small apple_support changes that
# are not yet upstream; see the hermetic-developer-dirs branch of the fork.
local_path_override(
    module_name = "apple_support",
    path = "../apple_support",
)

# Example configuration for this machine, used to build //examples/... These
# tags are what users of this module would write in their own MODULE.bazel,
# pointing at verbatim Xcode.app copies they re-host (either local paths or
# archives on servers they manage).
apple = use_extension("//:extensions.bzl", "apple", dev_dependency = True)
apple.xcode(
    name = "xcode26_5",
    aliases = ["xcode26"],
    default = True,
    path = "/Users/logan/Downloads/hermetic/xcode_26_5/Xcode.app",
)
apple.xcode(
    name = "xcode27beta2",
    path = "/Users/logan/Downloads/hermetic/xcode_27_beta_2/Xcode.app",
)
use_repo(apple, "apple_toolchains", "hermetic_apple_cc", "hermetic_swift_config")

apple_cc = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
    dev_dependency = True,
)
override_repo(apple_cc, local_config_apple_cc = "hermetic_apple_cc")

swift_non_module_deps = use_extension(
    "@rules_swift//swift:extensions.bzl",
    "non_module_deps",
    dev_dependency = True,
)
override_repo(swift_non_module_deps, rules_swift_local_config = "hermetic_swift_config")
