module(
    name = "hermetic_apple_toolchains",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "apple_support", version = "2.5.4")

# Needed by the generated hermetic Apple CC toolchain repository, which reuses
# apple_support's crosstool (the generated BUILD file and the copied
# cc_toolchain_config.bzl load from these modules).
bazel_dep(name = "bazel_features", version = "1.47.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "rules_apple", version = "4.5.3", dev_dependency = True)
bazel_dep(name = "rules_swift", version = "4.0.0-rc3", dev_dependency = True)
bazel_dep(name = "rules_xcodeproj", version = "4.1.0", dev_dependency = True)

# The hermetic Xcode support uses apple_support's rules-based CC toolchain
# (enabled via APPLE_SUPPORT_RULES_BASED_TOOLCHAIN=1 in .bazelrc), which is
# not yet in a tagged release; pin upstream main. The patch adds an
# extra_include_directories label_flag so the hermetic developer dirs can be
# allowlisted for include validation (proposed upstream).
git_override(
    module_name = "apple_support",
    commit = "b1585a30cd0ec39de2b5ad72ed5c8b157b2c6e4f",
    patch_strip = 1,
    patches = ["//patches:apple_support_extra_include_directories.patch"],
    remote = "https://github.com/bazelbuild/apple_support.git",
)

# Example configuration for this machine, used to build //examples/... These
# tags are what users of this module would write in their own MODULE.bazel,
# pointing at verbatim Xcode.app copies they re-host (either local paths or
# archives on servers they manage).
apple = use_extension("//:extensions.bzl", "apple", dev_dependency = True)

# --- BEGIN machine-local registration (rewritten by CI; keep markers) ---
apple.xcode(
    name = "xcode26_5",
    aliases = ["xcode26"],
    default = True,
    path = "/Users/logan/Downloads/hermetic/xcode_26_5/Xcode.app",
)
apple.xcode(
    name = "xcode27beta2",
    path = "/Users/logan/Downloads/hermetic/xcode_27_beta_2/Xcode.app",
)
apple.component(
    name = "metal_toolchain_26_5",
    path = "/Users/logan/Downloads/hermetic/xcode_26_5/components/MetalToolchain_17F42.exportedBundle",
    xcode = "xcode26_5",
)
apple.component(
    name = "metal_toolchain_27",
    path = "/Users/logan/Downloads/hermetic/xcode_27_beta_2/components/MetalToolchain_27A5209h.exportedBundle",
    xcode = "xcode27beta2",
)
apple.simulator_runtime(
    name = "ios26_5_runtime",
    path = "/Users/logan/Downloads/hermetic/xcode_26_5/simulators/iOS_26.5_23F77.dmg",
    xcode = "xcode26_5",
)
apple.simulator_runtime(
    name = "ios27_runtime",
    path = "/Users/logan/Downloads/hermetic/xcode_27_beta_2/simulators/iOS_27.0_24A5370g.dmg",
    xcode = "xcode27beta2",
)
# --- END machine-local registration ---

use_repo(apple, "apple_toolchains", "hermetic_swift_config")

swift_non_module_deps = use_extension(
    "@rules_swift//swift:extensions.bzl",
    "non_module_deps",
    dev_dependency = True,
)
override_repo(swift_non_module_deps, rules_swift_local_config = "hermetic_swift_config")
