load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "sources",
    srcs = ["Sources/App.swift"],
    module_name = "IOSExample",
    tags = ["manual"],
)

ios_application(
    name = "ios_example",
    bundle_id = "com.example.hermetic-apple-toolchains",
    families = ["iphone"],
    infoplists = ["Info.plist"],
    minimum_os_version = "26.0",
    resources = glob(["Assets.xcassets/**"]),
    deps = [":sources"],
)
